# watchlistarr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: architecture.md  data-model.md  letterboxd-lists.md  letterboxd-rss.md  radarr-custom-list.md  rules.md  sync-strategy.md  tech-stack.md  ui-features.md  versioning.md  workflows.md
.claude/skills/letterboxd-scraping-reference/: SKILL.md
.claude/skills/radarr-integration-reference/: SKILL.md
.claude/skills/watchlistarr-architecture-contract/: SKILL.md
.claude/skills/watchlistarr-build-and-env/: SKILL.md
.claude/skills/watchlistarr-change-control/: SKILL.md
.claude/skills/watchlistarr-config-and-flags/: SKILL.md
.claude/skills/watchlistarr-debugging-playbook/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_settings_per_entity.py  0003_custom_lists_multisource.py  0004_films_imdb_id.py  0005_custom_lists_relative_filters.py  0006_sort_order_rating_desc.py  0007_min_sync_interval.py  0008_swap_cooldown_for_snapshot.py  0009_custom_list_sources_polymorphic.py
scripts/: backfill_imdb.py  backfill_ratings.py  smoke.py
src/watchlistarr/: config.py  db.py  logging.py  main.py  scheduler.py
tests/: conftest.py
tests/fixtures/: film_page_movie.html  film_page_tv.html  films_p1.html  lists_index.html  pagination_block.html  pagination_single.html  rss_feed.xml  watchlist_p1.html
tests/integration/: conftest.py  test_audit.py  test_custom_lists_polymorphic.py  test_film_resolver.py  test_radarr_routing.py  test_rotation.py  test_scheduler.py  test_scrape_anti_flap.py  test_scrape_concurrency.py  test_scrape_discovery.py  test_scrape_initial_run.py  test_scrape_lists.py  test_scrape_rss.py  test_scrape_watchlist.py  test_ui_smoke.py
tests/unit/: test_healthz.py  test_intervals.py  test_log_buffer.py  test_log_messages.py  test_models.py  test_settings_service.py
(+104 files in other folders)
