[project]
name = "watchlistarr"
version = "1.2.0"
description = "Sirve listas y watchlists de Letterboxd a Radarr como Custom List."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Max Lainz" }]
dependencies = [
    "fastapi ~= 0.115",
    "uvicorn[standard] ~= 0.32",
    "sqlalchemy[asyncio] ~= 2.0",
    "greenlet ~= 3.1",
    "aiosqlite ~= 0.20",
    "alembic ~= 1.13",
    "httpx ~= 0.27",
    "beautifulsoup4 ~= 4.12",
    "lxml ~= 5.3",
    "feedparser ~= 6.0",
    "apscheduler ~= 3.10",
    "pydantic ~= 2.9",
    "pydantic-settings ~= 2.6",
    "structlog ~= 24.4",
]

[dependency-groups]
dev = [
    "ruff ~= 0.7",
    "mypy ~= 1.13",
    "pytest ~= 8.3",
    "pytest-asyncio ~= 0.24",
    "pytest-cov ~= 5.0",
    "respx ~= 0.21",
    "types-beautifulsoup4 ~= 4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchlistarr"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length is enforced by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["feedparser.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = ["slow: tests lentos que tocan disco / subprocess"]

[tool.coverage.run]
branch = true
source = ["src/watchlistarr"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
